# adventerm-game

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  test.txt
.claude/plans/: i-stronlgy-dislike-that-sharded-graham.md
adventerm/: CLAUDE.md  Cargo.toml
adventerm/schemes/: default.json  dim.json  high-contrast.json
adventerm/src/: app.rs  config.rs  dump.rs  input.rs  main.rs  menu.rs  relaunch.rs  ui.rs
adventerm/src/console/: log_sink.rs  mod.rs
adventerm/src/ui/: accel.rs  battle.rs  colors.rs  console.rs  gameplay.rs  inventory.rs  layout.rs  main_menu.rs  name_entry.rs  options.rs  options_advanced.rs  pause_menu.rs  save_browser.rs  seed_entry.rs
adventerm_ffi/: CLAUDE.md  Cargo.toml  build.rs  cbindgen.toml
adventerm_ffi/include/: adventerm_ffi.h
adventerm_ffi/scripts/: build-xcframework.sh
adventerm_ffi/src/: action.rs  battle.rs  console.rs  enums.rs  error.rs  game.rs  handle.rs  iter.rs  lib.rs  query.rs  save.rs  structs.rs
adventerm_ffi/tests/: action_dispatch.rs  battle_flow.rs  console_flow.rs  enum_round_trip.rs  error_codes.rs  handle_lifecycle.rs  iteration.rs  queries.rs  save_round_trip.rs  smoke.c
adventerm_lib/: CLAUDE.md  Cargo.toml
adventerm_lib/src/: action.rs  dungeon.rs  event.rs  game.rs  items.rs  lib.rs  los.rs  menu.rs  registry.rs  rng.rs  room.rs  save.rs  visibility.rs  world.rs
agents/: README.md  architecture.md  ffi.md  library.md  patterns.md  tui.md
plans/: Options.md
plans/ffi/: 00-overview.md  01-crate-and-handles.md  02-error-and-strings.md  03-enums-and-structs.md  04-actions-and-queries.md  (+3 more)
(+76 files in other folders)
