[package]
name = "adventerm"
version = "0.1.0"
description = "A TUI adventure game"
authors = ["getynge <me@getynge.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
adventerm_lib = { path = "../adventerm_lib" }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
