[package]
name = "adventerm"
version = "0.1.0"
description = "A TUI adventure game"
authors = ["getynge <me@getynge.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
adventerm_lib = { path = "../adventerm_lib" }